--- a/views/layouts/test.html
+++ b/views/layouts/test.html
@@ -19,12 +19,11 @@
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse text-align" id="navbarText">
+                    <div class="collapse navbar-collapse align-right" id="navbarText">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                             </li>
-                            {{!-- Practice login / logout functionality --}}
                             <li class="nav-item">
                                 {{#if loggedIn}}
                                 <a href="/dashboard">Dashboard</a> |
@@ -40,9 +39,8 @@
         </div>
     </header>
     <main class="container container-fluid mt-5">
-      {{{ body }}}
+        <h2> here is some text </h2>
     </main>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
