added to html test

--- a/views/layouts/test.html
+++ b/views/layouts/test.html
@@ -39,7 +39,12 @@
         </div>
     </header>
     <main class="container container-fluid mt-5">
-        <h2> here is some text </h2>
+        <div class="text-center">
+        <img src="../../sweetapplesLogo.png" class="img-fluid" alt="Logo">
+
+        <p>Welcome to Sweet Apples! unlike Rotten Tomatoes, we are a reputable review website based soley on Video Games!</p>
+     </div>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
