--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,5 @@
-<p> this is the homepage </p>
+        <div class="text-center">
+        <img src="../../sweetapplesLogo.png" class="img-fluid" alt="Logo">
+
+        <p>Welcome to Sweet Apples! unlike Rotten Tomatoes, we are a reputable review website based soley on Video Games!</p>
+     </div>
