--- a/views/layouts/test.html
+++ b/views/layouts/test.html
@@ -12,38 +12,39 @@
 
 <body>
     <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <h1 class="display-4">Sweet Apples</h1>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse align-right" id="navbarText">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                {{#if loggedIn}}
-                                <a href="/dashboard">Dashboard</a> |
-                                <button class="no-button" id="logout">Logout</button>
-                                {{else}}
-                                <a href="/login">Login</a>
-                                {{/if}}
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </header>
-        </div>
+        <header class="display-flex justify-space-between align-center p-2">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <h1 class="display-4">Sweet Apples</h1>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse align-right" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            {{#if loggedIn}}
+                            <a href="/dashboard">Dashboard</a> |
+                            <button class="no-button" id="logout">Logout</button>
+                            {{else}}
+                            <a href="/login">Login</a>
+                            {{/if}}
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
     </header>
     <main class="container container-fluid mt-5">
         <div class="text-center">
-        <img src="../../sweetapplesLogo.png" class="img-fluid" alt="Logo">
+            <img src="../../sweetapplesLogo.png" class="img-fluid" alt="Logo">
 
-        <p>Welcome to Sweet Apples! unlike Rotten Tomatoes, we are a reputable review website based soley on Video Games!</p>
-     </div>
+            <p>Welcome to Sweet Apples! unlike Rotten Tomatoes, we are a reputable review website based soley on Video
+                Games!</p>
+        </div>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
