--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,15 @@
     --darkred: #8D0304;
     --lightred: #FF2828;
 }
+
+ul{
+   list-style:none;
+   font-size: 20px;
+}
+
+ul, a{
+    color: var(--darkred);
+}
+.reviews-list{
+    color: var(--darkred);
+}
