--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,10 @@
-{{!-- <p> use for each -{{reviews.title}} </p> --}}
-<p> this is the dashboard </p>
+<div class="text-center">
+    <h1> Choose a Video Game to leave a review! </h1>
+    <ul>
+        {{#each videogames as |videogame|}}
+        <li> <a href="/videogames/{{videogame.id}}">{{videogame.videogame_name}}</a> </li>
+        {{/each}}
+    </ul>
+</div>
 
 <script src="./js/logout.js"></script>
