--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Sweet Apples</title>
 </head>
 
@@ -22,12 +23,12 @@
                     <div class="collapse navbar-collapse text-align" id="navbarText">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="/">Home</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 {{#if loggedIn}}
                                 <a href="/dashboard">Dashboard</a> |
-                                <button class="no-button" id="logout">Logout</button>
+                                <a href="/" id="logout">Logout</a>
                                 {{else}}
                                 <a href="/login">Login</a>
                                 {{/if}}
