--- a/views/partials/reviewcard.handlebars
+++ b/views/partials/reviewcard.handlebars
@@ -1,6 +1,6 @@
 <div class="text-center">
-    <div class="card">
-        <div class="card-header">
+    <div class="card review-card">
+        <div class="card-header bg-darkred">
         </div>
         <div class="card-body">
             <blockquote class="blockquote mb-0">
@@ -12,4 +12,5 @@
             </blockquote>
         </div>
     </div>
+    </br>
 </div>
