--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,12 @@
-<div class="text-center">
-    <h1> Choose a Video Game to leave a review! </h1>
+<div class="text-center videogames-list container">
+    <div class="row">
+    <h1> Choose a Video Game to see how other users reviewed the game, or to add your own review! </h1>
     <ul>
         {{#each videogames as |videogame|}}
-        <li> <a href="/videogames/{{videogame.id}}">{{videogame.videogame_name}}</a> </li>
+        <li> <a class="darkredtext" href="/videogames/{{videogame.id}}">{{videogame.videogame_name}}</a> </li>
         {{/each}}
     </ul>
+    </div>
 </div>
 
 <script src="./js/logout.js"></script>
