--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
 <div class="text-center">
-        <img src="../../sweetapplesLogo.png" class="img-fluid" alt="Logo">
+        <img src="../../images/sweetapplesLogo.png" class="img-fluid" alt="Logo">
         <p>Welcome to Sweet Apples! unlike Rotten Tomatoes, we are a reputable review website based soley on Video Games!</p>
 </div>
