--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,36 +13,34 @@
 
 <body>
     <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <h1 class="display-4">Sweet Apples</h1>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse text-align" id="navbarText">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="/">Home</a>
-                            </li>
-                            <li class="nav-item active">
-                                {{#if loggedIn}}
-                                <a href="/dashboard">Dashboard</a> |
-                                <a href="/" id="logout">Logout</a>
-                                {{else}}
-                                <a href="/login">Login</a>
-                                {{/if}}
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </header>
-        </div>
-    </header>
+        <header class="display-flex align-center p-2 bg-darkred">
+            <nav class="navbar navbar-expand-lg ">
+                <h1>Sweet Apples</h1>
+                {{!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button> --}}
+                <div class="collapse navbar-collapse text-align" id="navbarText">
+                    <ul class="navbar-nav mr-auto navitem">
+                        <li class="nav-item active navitem">
+                            {{#if loggedIn}}
+                            <a href="/">Home</a> |
+                            <a href="/dashboard"> Dashboard</a> |
+                            <a href="/" id="logout"> Logout</a>
+                            {{else}}
+                            <a href="/">Home</a> |
+                            <a href="/login">Login</a>
+                            {{/if}}
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
     <main class="container container-fluid mt-5">
-      {{{ body }}}
+        {{{ body }}}
     </main>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
