--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,3 +61,10 @@ a:hover{
 .bg-darkred{
     background-color: var(--darkred);
 }
+
+@media screen and (max-width:768px) {
+    nav{
+        flex-direction: column;
+        justify-content: space-around;
+    }
+ }
