--- a/views/partials/reviewcard.handlebars
+++ b/views/partials/reviewcard.handlebars
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="text-center" id={{user.id}}>
     <div class="card review-card">
         <div class="card-header bg-darkred">
         </div>
@@ -6,8 +6,7 @@
             <blockquote class="blockquote mb-0">
                 <h2>"{{review_description}}"</h2>
                 <footer class="blockquote-footer">
-                    {{!-- <p>{{user.username}}</p> --}}
-                    <p>Username</p>
+                    <p>{{user.username}}</p>
                 </footer>
             </blockquote>
         </div>
