--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -10,7 +10,16 @@
         </div>
         <div class="col-3 text-center">
             <h2>Add a review</h2>
-            <button> + </button>
+            <form class="form new-review-form">
+                <div class="form-group">
+                    <label for="review-desc"></label>
+                    <textarea class="form-input" id="review-desc" name="review-desc"></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Create</button>
+                </div>
+            </form>
+
         </div>
     </div>
 </div>
