--- a/views/reviews.handlebars
+++ b/views/reviews.handlebars
@@ -16,10 +16,9 @@
                     <textarea class="form-input" id="review-desc" name="review-desc"></textarea>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button type="submit" class="btn btn-primary">Add</button>
                 </div>
             </form>
-
         </div>
     </div>
 </div>
