--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,8 @@
     <h2> Choose a Video Game to see how other users reviewed the game, or to add your own review! </h2>
     <ul>
         {{#each videogames as |videogame|}}
-        <li class="gameli"> <a href="/videogames/{{videogame.id}}">{{videogame.videogame_name}}</a> </li>
+        <li class="gameli"> <a href="/videogames/{{videogame.id}}">{{videogame.videogame_name}}</a> 
+        </li>
         {{/each}}
     </ul>
     </div>
