--- a/views/partials/reviewcard.handlebars
+++ b/views/partials/reviewcard.handlebars
@@ -1,6 +1,7 @@
 <div class="text-center" id={{user.id}}>
     <div class="card review-card">
         <div class="card-header bg-darkred">
+            <button class="btn btn-sm btn-danger" data-id="{{id}}">X</button>
         </div>
         <div class="card-body">
             <blockquote class="blockquote mb-0">
