--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,13 +11,13 @@
 </div> --}}
 
 <div class="text-center videogames-list container">
-    <div class="row">
+    <div class="row box" >
         <h2> Choose a Video Game to see how other users reviewed the game, or to add your own review! </h2>
         <ul>
             {{#each videogameArray as |videogame|}}
-            <li class="gameli">
+            <li class="gameli row">
                 <a href="/videogames/{{videogame.data.id}}">{{videogame.data.videogame_name}}</a>
-            <img src ="/images/{{videogame.file}}.jpeg" alt = {{videogame.file}}> </img>
+            <img class = "bgimg" src ="/images/{{videogame.file}}.jpeg" alt = {{videogame.file}}> </img>
             </li>
             {{/each}}
         </ul>
