--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,7 +13,7 @@
 <div class="text-center videogames-list container">
     <div class="row box" >
         <h2> Choose a Video Game to see how other users reviewed the game, or to add your own review! </h2>
-        <ul>
+        <ul class="game-list">
             {{#each videogameArray as |videogame|}}
             <li class="gameli row">
                 <a href="/videogames/{{videogame.data.id}}">{{videogame.data.videogame_name}}</a>
